SalesforceAssignments/Salesforce_Assignment_2/src/objects/Validation_Object__c.object
<CustomObject>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <label>Credit Card Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Date__c</fullName>
        <label>Custom Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mix_Pct__c</fullName>
        <label>MixPct</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MultipleOfFive__c</fullName>
        <label>MultipleOfFive</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ValidationObject</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Validation Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ValidationObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Multiple_of_five</fullName>
        <active>true</active>
        <description>Validates that a custom field called Multiple of 5 is a multiple of five.</description>
        <errorConditionFormula>MOD( MultipleOfFive__c ,5)  &lt;&gt; 0</errorConditionFormula>
        <errorDisplayField>MultipleOfFive__c</errorDisplayField>
        <errorMessage>this field must have a multiple of five.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValdiateCustomDate</fullName>
        <active>true</active>
        <description>Validates that the value of a custom date field is a weekday (not Saturday or Sunday).</description>
        <errorConditionFormula>CASE( MOD( Custom_Date__c  -  DATE(1900,1,7) ,7) , 0, 0, 6, 0,1)   = 0</errorConditionFormula>
        <errorDisplayField>Custom_Date__c</errorDisplayField>
        <errorMessage>custom date must not be  a weekday (not Saturday or Sunday).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidateCreditCard</fullName>
        <active>true</active>
        <description>Validates that a custom text field called Credit_Card_Number is formatted in 9999-9999-9999-9999 or 9999999999999999 number</description>
        <errorConditionFormula>NOT( REGEX( Credit_Card_Number__c , &quot;(((\\d{4}-){3}\\d{4})|\\d{16})?&quot;))</errorConditionFormula>
        <errorDisplayField>Credit_Card_Number__c</errorDisplayField>
        <errorMessage>Credit_Card_Number should be  in this format 9999-9999-9999-9999 or 9999999999999999 number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_mixPct</fullName>
        <active>true</active>
        <description>Validates that a custom field called Mix Pct is between 0 and 100%.</description>
        <errorConditionFormula>OR(  Mix_Pct__c    &lt;  0.0,  Mix_Pct__c    &gt;  1.0)</errorConditionFormula>
        <errorDisplayField>Mix_Pct__c</errorDisplayField>
        <errorMessage>Mix Pct should be between 0 and 100%.</errorMessage>
    </validationRules>
</CustomObject>